add profile info via google oauth

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,2 +1,3 @@
-<h1>Your Account</h1>
-<h4>User ID: <%= user._id %></h4>
+<h1>Welcome <%= user.username %></h1>
+<h4><%= user.email %></h4>
+<img src='<%= user.picture %>'>
