add file upload

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,4 @@
 <h1>home page</h1>
-<a href='/auth/google'><button>Sign in with Google</button></a>
+<a href='/auth/google'><button>Login with Google</button></a>
+<a href='/user/login'><button>Login</button></a>
+<a href='/user/new-user'><button>Sign up</button></a>
