a bunch of updates

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,16 @@
 <h1>home page</h1>
-<a href='/auth/google'><button>Sign in with Google</button></a>
+
+<div>
+    <a href='/auth/google'><button>Sign in with Google</button></a>
+</div>
+
+
+
+
+<div>
+    
+    <form class="search-bar" action="/post/search" method="post">
+    <input type="search" name="search">
+    <button type="submit">&#x1F50D</button>
+
+</div>
