aws upload download

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,3 +1,4 @@
 <h1>Welcome <%= user.firstName %></h1>
 <h4><%= user.email %></h4>
-<img src='<%= user.picture %>'>
+<%= user.picture %>
+<img src=<%= picture %>>
