--- a/views/user/sign-up.ejs
+++ b/views/user/sign-up.ejs
@@ -3,6 +3,6 @@
   <input type="text" name="username" required placeholder="Username"/>
   <input type="email" name="email" required placeholder="Email" />
   <input type="password" name="password" required placeholder="Password" />
-  <input type="file" name="profile-picture" placeholder="Upload a profile picture" />
+  <input type="file" name="picture" placeholder="Upload a profile picture" />
   <button type="submit">Create Account</button>
 </form>
