--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,10 +8,10 @@
 
 
 <div class="search-wrapper">
-  <h1>Search for Country</h1>
+ 
   <div class="search-bar">
     <form class="search-btn" action="/countries/main" method="post">
-        <input type="search" id="search" name="search" autocomplete="off" data-search>
+        <input type="search" id="search" name="search" autocomplete="off" placeholder="Search for Country" data-search>
         <button type="submit"> &#128269</button>
     </form>
    
