--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,31 @@
+.main-container{
+    display:flex;
+    width: 100vw;
+  /*   border: 1px solid black; */
+
+     gap: .25rem;
+     margin-top: 1rem;
+
+}
+
+h1{
+    font-size: 5rem;
+}
+
+h2{
+    font-size: 3rem;
+}
+.left-container{
+    border-right: 2px dotted green;
+    width: 50%;
+    height: 100vh;
+}
+.right-container{
+    border-left: 2px dotted blue;
+    width: 50%;
+    height: 100vh;
+}
+
 .search-wrapper{
     display:flex;
     flex-direction: column;
@@ -59,7 +87,7 @@ a:link {
 
 .card {
    
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
     padding: .25rem;
     border-radius: 8px;
@@ -81,38 +109,39 @@ a:link {
     display:none;
 }
 
-.main-container{
-    display:flex;
-    width: 100vw;
-    border: 1px solid black;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-     gap: .25rem;
-     margin-top: 1rem;
-}
 
 .wrapper{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
     padding: .25rem;
 }
 
 .info-wrapper{
     display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    
     gap: 20px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
     padding: .25rem;
+    height: 20vh;
+    
 }
 
 .info-card {
-    border: 1px solid black;
-    width: 25%;
+/*     display:flex;
+    flex-direction: column;
+    justify-items: flex-start;
+    align-items: center; */
+   /*  border: 1px solid black; */
+    width: 70%;
+
 }
 
 .div-img{
     border: 1px solid blue;
+}
+
+.div-img > img {
+    height: 100%;
+    width: 100%;
 }
