--- a/public/css/index.css
+++ b/public/css/index.css
@@ -59,7 +59,7 @@ h2{
 
 input {
     font-size: 1rem;
-    border: none;
+    /* border: none; */
     width: 90%;
     outline: none;
     padding-left: .25rem;
