add weather api, add map location

--- a/views/cities/add-content.ejs
+++ b/views/cities/add-content.ejs
@@ -1,5 +1,6 @@
-<form action="/city/:id/add-place" method="post">
-    <input type="text" name="title" placeholder="Add title">
-    <textarea name="place-description"></textarea>
+<form action="/city/:id/add-place" method="post" enctype="multipart/form-data">
+    <input type="text" name="title" placeholder="Add title" required>
+    <textarea name="place-description" placeholder="Say something about this place..." required></textarea>
+    <input type="file" name="image" placeholder="Add photo">
     <button type="submit">Add</button>
 </form>
