--- a/views/cities/city-info.ejs
+++ b/views/cities/city-info.ejs
@@ -10,14 +10,121 @@
     <% for(let i=0; i < result.places.length; i++) { %>
         <li><%= result.places[i].name %></li>
         <li><%= result.places[i].description %></li>
+        <li><%= result.places[i].author %></li>
+        <li><img src="<%= result.places[i].image %>"></li>
         <br>
     <% }; %>
 </ul>
 
 <br>
 <br>
-<form action="/city/<%= result.id %>/add-place" method="post">
-    <input type="text" name="name" placeholder="Add title">
-    <textarea name="description"></textarea>
+// FORM TO ADD A PLACE
+<form action="/city/<%= result.id %>/add-place" method="post" enctype="multipart/form-data">
+    <input type="text" name="name" placeholder="Add title" required>
+    <textarea name="description" placeholder="Say something about this place..." required></textarea>
+    <input type="file" name="image" placeholder="Add photo">
     <button type="submit">Add</button>
 </form>
+<br>
+<br>
+
+<div id="map"></div>
+
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
+<script>
+let map = L.map('map').setView(<%= JSON.stringify(coordinates) %>, 13)
+  L.tileLayer(
+    'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiaXJvbmhhY2stZWxtZWhkaSIsImEiOiJja3p5ZjhwcHUwMzVyMnhtbDJxeGprMHc0In0.xTZHP5imV7lIxjnNbpGZyg',
+    {
+      attribution:
+        'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+      maxZoom: 18,
+      id: 'mapbox/streets-v11',
+      tileSize: 512,
+      zoomOffset: -1,
+      accessToken: 'your.mapbox.access.token',
+    }
+  ).addTo(map)
+  var marker = L.marker([51.5, -0.09]).addTo(map)
+  map.doubleClickZoom.disable()
+  map.addEventListener('dblclick', (event) => {
+    const data = {
+      lat: event.latlng.lat,
+      lng: event.latlng.lng,
+    }
+    const request = new XMLHttpRequest()
+    request.open('POST', '/map', true)
+    request.setRequestHeader(
+      'Content-Type',
+      'application/x-www-form-urlencoded; charset=UTF-8'
+    )
+    request.send(JSON.stringify(data))
+    document.location.reload()
+  })
+</script>
+
+<% coordinates.forEach((coo) => { %>
+<script>
+  L.marker(<%= JSON.stringify(coo.xy) %>).addTo(map)
+</script>
+<% }) %>
+
+<div class="weather-card">
+    <div class="weather-top">
+        <div class="weather-info">
+            <div>
+            Here is your forecast for <%= response.data.location.name %>
+            <br>
+            Local Time: <%= response.data.location.localtime %>
+            <br>
+            Current Temperature: <%= response.data.current.temp_c %>°C
+            <br>
+            Feels Like: <%= response.data.current.feelslike_c %>°C
+            </div>
+            
+            <div class="forecast-weather-icon">
+                <%= response.data.current.condition.text %> 
+                <img src='<%= response.data.current.condition.icon %>'>
+            </div> 
+        </div>  
+    </div>
+    <div class="forecast">
+        
+            <h4>3-Day-Forecast:</h4>
+        
+        <div class="forecast-table">
+            <div class="forecastday">
+                <%= response.data.forecast.forecastday[0].date %>
+                <div class="forecast-weather-icon">
+                    <%= response.data.forecast.forecastday[0].day.condition.text %>  
+                    <img src='<%= response.data.forecast.forecastday[0].day.condition.icon %>'>
+                </div>
+                    High: <%= response.data.forecast.forecastday[0].day.maxtemp_c %>
+                    Low: <%= response.data.forecast.forecastday[0].day.mintemp_c %>
+             </div>
+             <div class="forecastday">
+                 <%= response.data.forecast.forecastday[1].date %>
+                 <div class="forecast-weather-icon">
+                     <%= response.data.forecast.forecastday[1].day.condition.text %>  
+                     <img src='<%= response.data.forecast.forecastday[2].day.condition.icon %>'>
+                 </div>
+                 
+                 High: <%= response.data.forecast.forecastday[1].day.maxtemp_c %>
+                 Low: <%= response.data.forecast.forecastday[1].day.mintemp_c %>
+             </div>
+             <br>
+             <div class="forecastday">
+                 <%= response.data.forecast.forecastday[2].date %>
+                 <div class="forecast-weather-icon">
+                     <%= response.data.forecast.forecastday[2].day.condition.text %>  
+                     <img src='<%= response.data.forecast.forecastday[2].day.condition.icon %>'>
+                 </div>
+                 
+                 High: <%= response.data.forecast.forecastday[2].day.maxtemp_c %>
+                 Low: <%= response.data.forecast.forecastday[2].day.mintemp_c %> 
+             </div>
+        </div>
+    </div>
+</div>
