--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <div class="search-wrapper">
  
   <div class="search-bar">
-    <form class="search-btn" action="/search" method="post">
+    <form class="search-btn" action="/search" action="/weather" method="post">
         <input type="search" id="search" name="search" autocomplete="off" placeholder="Search for City or Country" data-search>
         <button type="submit"> &#128269</button>
     </form>
