--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,7 @@
 
     <nav>
       <div class="flex" width="2000px">
+        <a class='nav-link' href="/">HOME</a>
         <a class='nav-link' href="/user/login">Login</a>
         <a class='nav-link' href="/user/create">Sign Up</a>
         <a class='nav-link' href="/auth/profile">Profile</a>
