--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,27 @@
-<div class="search-wrapper">
- 
-  <div class="search-bar">
-    <form class="search-btn" action="/search" method="post">
-        <input type="search" id="search" name="search" autocomplete="off" placeholder="Search for City or Country" data-search>
-        <button type="submit"> &#128269</button>
-    </form>
+<link rel="stylesheet" href="/css/home.css">
+
+
+<div class="home-container">
+
+  <div class="search-div">
+    <form class="search-bar" action="/search" method="post">
+      <input type="search" id="search" name="search" autocomplete="off" placeholder="Search for City or Country" data-search>
+      <button type="submit"> &#128269</button>
+  </form>
+  
   </div>
+   
+  
+  
+      <template data-user-template>
+        <a href="city/6219ebc49fc3a4b907c30907">>  <div class="header" data-header></div> </a>
+        <div class="body" data-body></div>
+    </template>
 
-<div class="user-cards" data-user-cards-container>
-    <template data-user-template>
-    
-    <div class="card">
-      <div class="header" data-header></div>
-      <div class="body" data-body></div>
-    </div>
-
-  </template>
 </div>
+
+
+
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="/js/db.js"></script>
