--- a/views/post/add-post.ejs
+++ b/views/post/add-post.ejs
@@ -1,12 +1,12 @@
 <h1>Create Post</h1>
 <br>
 
-<form action="/user/create" enctype="multipart/form-data" method="post">
+<form action="/post/create"  method="post" enctype="multipart/form-data">
 
     <input type="text" name="title" placeholder="title" required>
     <br>
     <br>
-    <input type="text" name="description" placeholder="title" required>
+    <input type="text" name="description" placeholder="description" required>
     <br>
     <br>
     <textarea name="content" cols="30" rows="10"></textarea>
