--- a/views/post/all-posts.ejs
+++ b/views/post/all-posts.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-   <% posts.forEach(post => { %>  
+   <% post.forEach(post => { %>  
     <div class="card-post">
         <h2> <%=  post.title  %>  </h2>
         <p> <%= post.content.substr(0, 100) %>... <a href="/post/read/<%= post.id %> "> Read more </a> </p>
