--- a/views/post/read-post.ejs
+++ b/views/post/read-post.ejs
@@ -3,12 +3,19 @@
 <div class="container">
     
      <div class="card-post">
+        
          <h2> <%=  post.title  %>  </h2>
          <p> <%= post.content %> </p>
          <% if(post.picture) { %>
-         
+         <img src="<%= post.picture %>">
          <% } %>
-            <button > Edit </button>
+        
+        <a href="/post/<%= post.id %>/edit"><button>Edit</button></a>
+        
+        <form action="/post/<%= post.id %>/update?_method=PUT" method="POST" enctype="multipart/form-data">
+            <button type="submit">Delete</button>
+        </form>
+        
      </div>
  
  </div>
