--- a/public/css/paris2.css
+++ b/public/css/paris2.css
@@ -3,7 +3,7 @@
     /* flex-wrap: wrap; */
     height: 100vh;
     width:100vw;
-    background-image: url('../images/travel.jpg');
+    background-image: url('../images/travell.jpg');
 }
 
 .info{
