--- a/views/post/read-post.ejs
+++ b/views/post/read-post.ejs
@@ -5,7 +5,10 @@
      <div class="card-post">
         
          <h2> <%=  post.title  %>  </h2>
+         <p> <%= post.createdAt.toLocaleString() %> </p>
          <p> <%= post.content %> </p>
+         <p> <%= post.author.username %> </p>
+
          <% if(post.picture) { %>
          <img src="<%= post.picture %>">
          <% } %>
