--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -120,10 +120,10 @@
   </body>
   <footer class="footer">
   
-      <a href="https://www.ironhack.com/en">IronHack</a>
+      <a href="https://www.ironhack.com/en" target="_blank" rel="noopener noreferrer">IronHack</a>
   
-    <a href="https://github.com/alohacyclist">GITHUB - Christian </a>
-    <a href="https://github.com/makariuz">GITHUB - Samuel </a>
+    <a href="https://github.com/alohacyclist" target="_blank" rel="noopener noreferrer">GITHUB - Christian </a>
+    <a href="https://github.com/makariuz" target="_blank" rel="noopener noreferrer">GITHUB - Samuel </a>
   
   </footer>
 </html>
