--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -7,6 +7,7 @@
 
 <form class= "card-form login" action="/user/login" method="post">
    <!--  <div class="login-div"> -->
+     <span> <%= message %>  </span>
         <label for="email">Email: </label>
         <input type="email" name="email" placeholder="Email" />
     
