--- a/public/css/card.css
+++ b/public/css/card.css
@@ -61,10 +61,12 @@
     align-content: center;
     justify-content: center;
     gap: 10px;
-   
+    font-family: 'Hubballi', cursive;
     height: 80%;
 }
-.card-form > button {
+
+.card-form > button,
+.create-card > button {
     
     align-self: flex-end;
     padding: 10px 20px;
@@ -72,6 +74,11 @@
     border: .4px solid #2424cb;
     background-color: #a0cde7;
     cursor: pointer;
+}
+
+.create-card > textarea {
+    border-radius: 8px;
+    border: 1px solid #2424cb;
 }
 
 
@@ -87,12 +94,13 @@
 }
 
 .create-card{
-    margin-top: 20px;
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
     justify-content: center;
     gap: 10px;
+   width: 300px;
+    height: 80%;
 }
   .card-container:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -110,7 +118,8 @@
 
 }
 
-.card-form > input {
+.card-form > input,
+.create-card > input[type=text] {
     width: 100%;
     padding-left: 10px;
     padding-right: 10px;
@@ -118,9 +127,12 @@
     font-size: 1rem;
     border-radius: 8px;
     height: 30px;
+    border: 1px solid #2424cb;
+   
 }
 
-.card-form > button {
+.card-form > button,
+.create-card > button {
     padding: 5px 15px 5px 15px;
     border-radius: 8px;
 }
@@ -140,7 +152,20 @@
     overflow: hidden;
 }
 
-
+.create-post-container{
+    width: 30%;
+    height: 75%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    background-color: #faf8d9;
+  
+    overflow: hidden;
+}
 
 .prof-details{
     width: 50%;
@@ -171,10 +196,12 @@
     display:flex;
     flex-direction: column;
     width: 100%;
-    height: 20%;
+    height: 400px;
     padding: 5px;
     gap: 5px;
+    max-height: 80%;
     min-width: inherit;
+    overflow: auto;
     /* border: 2px solid black; */
 }
 
