--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,1 +1,18 @@
-LOGIN
+<h1> Login page </h1>
+
+<br>
+
+<br>
+<form action="/user/login" method="post">
+
+    <label for="email">Email: </label>
+    <input type="email" name="email" placeholder="Email" />
+    <br>
+    <br>
+    <label for="password">Password: </label>
+    <input type="password" name="password" placeholder="Password">
+    <br>
+    <br>
+    <button type="submit"> Login </button>
+    
+</form>
